--- a/code/client/templates/globals/authenticated-navigation.html
+++ b/code/client/templates/globals/authenticated-navigation.html
@@ -1,7 +1,14 @@
 <template name="authenticatedNavigation">
   <ul class="nav navbar-nav">
-    <li class="{{currentRoute 'index'}}"><a href="{{pathFor 'index'}}">Index</a></li>
-    <li class="{{currentRoute 'dashboard'}}"><a href="{{pathFor 'dashboard'}}">Dashboard</a></li>
+    {{#if isInRole 'admin'}}
+      <li class="{{currentRoute 'users'}}"><a href="{{pathFor 'users'}}">Users</a></li>
+    {{/if}}
+
+    {{#if isInRole 'admin,manager'}}
+      <li class="{{currentRoute 'managers'}}"><a href="{{pathFor 'managers'}}">Managers</a></li>
+    {{/if}}
+    
+    <li class="{{currentRoute 'employees'}}"><a href="{{pathFor 'employees'}}">Employees</a></li>
   </ul>
   <ul class="nav navbar-nav navbar-right">
     <li class="dropdown">
